homelab-istio/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd-virtualservice
spec:
  hosts:
  - "argocd.192.168.87.3.nip.io"
  gateways:
  - argocd-gateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server.argocd.svc.cluster.local
        port:
          number: 443
