homelab-istio/karma-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: karma-virtualservice
spec:
  hosts:
  - "karma.192.168.87.2.nip.io"
  gateways:
  - karma-gateway
  http:
  - route:
    - destination:
        host: karma.karma.svc.cluster.local
        port:
          number: 80
