homelab-istio/kiali-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
spec:
  hosts:
  - "kiali.192.168.87.3.nip.io"
  gateways:
  - kiali-gateway
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
